@@ -41,6 +41,7 @@ V1.1 Release
 -Updated Spring.NET to version 1.3.0.
 -Made DefaultWindowManager more friendly to WPF's NavigationWindow.
 -Fixed a bug with non-modal window shutdown in DefaultWindowManager.
+-Fixed a core bug in custom attribute discovery.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
